--- a/scss/bones/_bones.scss
+++ b/scss/bones/_bones.scss
@@ -208,7 +208,7 @@
   margin-bottom: 2.5rem;
 }
 @include breakpoint(small only) {
-  #listing, #item {
+  #listing, #item, #sidebar {
     &.column, &.columns {
       padding-left: 0;
       padding-right: 0;
